# rsd

./: .buildinfo  .bumpversion.cfg  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.in  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml  wercker.yml
.github/workflows/: docs.yaml  python-lib.yaml
_images/: graphviz-a863ebea398b46e78f5d7830c42f4318f1b14c40.png.map
_modules/: index.html
_modules/rsd/: graph.html
_sources/: index.rst.txt  index.txt
_sources/modules/: rsd.rst.txt  rsd.txt
_static/: opensearch.xml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/modules/: rsd.rst
misc/: index.html
modules/: rsd.html
rsd/: __init__.py  graph.py
tests/: __init__.py  graph_test.py  test_graph.py  test_product.py  test_review.py  test_reviewer.py  test_scale.py  test_suite.py
