[build-system]
build-backend = "poetry.core.masonry.api"

requires = [ "poetry-core>=2" ]

[project]
name = "rgmining-rsd"
version = "0.3.4"
description = "An implementation of Review Spammer Detection algorithm"
readme = "README.rst"
keywords = [ "algorithm", "graph", "icdm", "mining", "review" ]
license = "GPL-3.0-only"
authors = [
  { name = "Junpei Kawamoto", email = "kawamoto.junpei@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "networkx>=3.2.1",
  "numpy>=2.2",
]

urls.documentation = "https://rgmining.github.io/rsd/"
urls.homepage = "https://rgmining.github.io/rsd/"
urls.repository = "https://github.com/rgmining/rsd"

[tool.poetry]
packages = [
  { include = "rsd" },
]
include = [ "COPYING" ]

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.0.2"
pre-commit = "^4.1"
pre-commit-uv = "^4.1.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
ruff = "^0.11.0"
types-networkx = "^3.4.2.20250312"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=rsd --cov-branch --cov-report=term-missing --cov-report=xml"

[tool.bumpversion]
current_version = "0.3.4"
commit = true
pre_commit_hooks = [
  "poetry lock",
  "git add poetry.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rsd/__init__.py"

[[tool.bumpversion.files]]
filename = "README.rst"

[tool.mypy]
files = "rsd/**/*.py,tests/**/*.py"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
